--- a/www/effect_2.html
+++ b/www/effect_2.html
@@ -121,8 +121,8 @@ $(document).ready(function () {
 <div id="causal-effect-contd" class="section level2">
 <h2>Causal Effect (Cont’d)</h2>
 <p>We have just learned that identifying individual causal effects is generally not possible due to missing data. However, one might ask if an aggregate causal effect can be defined instead for a population of individuals. To do so, we return to the notion of potential outcomes.</p>
-<div id="average-causal-effect" class="section level5">
-<h5>Average Causal Effect</h5>
+<div id="average-causal-effect" class="section level4">
+<h4>Average Causal Effect</h4>
 <p>Let’s return to our previous example. Rufus would like to know if on average, the exercise routine reduces individual BMI. Depending on the outcome, he might reconsider his treatment selection! Rufus introduces the plan to all of his family members; five people in total. Through the multi-universe lens, we can preview everyone’s potential outcomes under both treatment levels.</p>
 <table>
 <thead>
@@ -160,13 +160,13 @@ $(document).ready(function () {
 </tr>
 </tbody>
 </table>
-<p>With this information, we can calculate the average of everyone’s individual causal effect, <span class="math inline">\(E\left\{Y^{\mbox{*}}(A=1) - Y^{\mbox{*}}(A=0)\right\}\)</span>. Recall that the expectation of differences equals the differences of expectations, and thus <span class="math display">\[E\left\{Y^{\mbox{*}}(A=1) - Y^{\mbox{*}}(A=0)\right\} = E\left\{Y^{\mbox{*}}(A=1) \right\} - E\left\{Y^{\mbox{*}}(A=0)\right\}\]</span>. We formalize it as <span class="math display">\[\delta^{\mbox{*}} = E\left\{Y^{\mbox{*}}(A=1) - Y^{\mbox{*}}(A=0)\right\} = E\left\{Y^{\mbox{*}}(A=1) \right\} - E\left\{Y^{\mbox{*}}(A=0)\right\}.\]</span></p>
+<p>With this information, we can calculate the average of everyone’s individual causal effect, <span class="math inline">\(E\left\{Y^{\mbox{*}}(A=1) - Y^{\mbox{*}}(A=0)\right\}\)</span>. Recall that the expectation of differences equals the differences of expectations, and thus <span class="math display">\[E\left\{Y^{\mbox{*}}(A=1) - Y^{\mbox{*}}(A=0)\right\} = E\left\{Y^{\mbox{*}}(A=1) \right\} - E\left\{Y^{\mbox{*}}(A=0)\right\}.\]</span> We formalize it as <span class="math display">\[\delta^{\mbox{*}} = E\left\{Y^{\mbox{*}}(A=1) - Y^{\mbox{*}}(A=0)\right\} = E\left\{Y^{\mbox{*}}(A=1) \right\} - E\left\{Y^{\mbox{*}}(A=0)\right\}.\]</span></p>
 <p><span class="math inline">\(\delta^{\mbox{*}}\)</span> is referred as the average causal effect of the population of interest.</p>
 <p>If we had access to all of the potential outcomes, the average causal effect would be <span class="math display">\[E\left\{Y^{\mbox{*}}(A=1) \right\} = \frac{1}{5} \sum_{N=1}^5 Y^{\mbox{*}}(A=1) = \frac{1}{5} \left( 24 + 20+35+32+31\right) = \frac{1}{5} (142) = 28.4\]</span>. <span class="math display">\[E\left\{Y^{\mbox{*}}(A=0) \right\} = \frac{1}{5} \sum_{N=1}^5 Y^{\mbox{*}}(A=1) = \frac{1}{5} \left( 27+19.5+32+29+29\right) = \frac{1}{5} (136.5) = 27.3.\]</span> Thus, <span class="math display">\[\delta^{\mbox{*}} = 28.4 - 27.3 = 1.1.\]</span> Our exercise plan is not as effective as we had hoped!</p>
 <p>However, in reality, we can only assign one of the treatment levels to each individual. This means that we can only observe one of the potential outcomes for each row in the table above. Missing data techniques must be employed to estimate the average causal effect.</p>
 </div>
-<div id="summary" class="section level3">
-<h3>Summary</h3>
+<div id="summary" class="section level4">
+<h4>Summary</h4>
 <blockquote>
 <p><strong>Potential outcomes</strong>: Potential outcomes are defined as an individual’s response if he or she is assigned to a particular level of treatment, <span class="math inline">\(A=a\)</span>. Potential outcomes are also called counterfactual random variables because we can only assign one level of treatment to the individual and thus only observe one of them. All of the other potential outcomes under different levels of treatment for that individual are missing.</p>
 </blockquote>
